--- a/index.html
+++ b/index.html
@@ -98,24 +98,28 @@
 </head>
 <body>
 
-<!-- Background music with fade-in -->
-<audio id="bg-music" autoplay loop>
+<!-- Background music with muted autoplay and fade-in -->
+<audio id="bg-music" autoplay loop muted>
   <source src="intro.mp3" type="audio/mpeg">
 </audio>
 <script>
-  const music = document.getElementById("bg-music");
-  music.volume = 0,5; // start silent
-  const targetVolume = 1; // final volume
-  const fadeDuration = 5000; // 5 seconds
-  const fadeSteps = 50;
-  const fadeInterval = fadeDuration / fadeSteps;
-  let currentStep = 0;
-  function fadeInMusic() {
+const music = document.getElementById("bg-music");
+music.volume = 0; // start silent
+music.muted = false; // unmute to allow autoplay sound
+const targetVolume = 0.2; // desired volume
+const fadeDuration = 5000; // fade in 5 seconds
+const fadeSteps = 50;
+const fadeInterval = fadeDuration / fadeSteps;
+let currentStep = 0;
+
+function fadeInMusic() {
     currentStep++;
     music.volume = Math.min(targetVolume, (currentStep / fadeSteps) * targetVolume);
     if(currentStep < fadeSteps) setTimeout(fadeInMusic, fadeInterval);
-  }
-  fadeInMusic();
+}
+
+// Small timeout ensures GMod HTML panel allows autoplay
+setTimeout(fadeInMusic, 100);
 </script>
 
 <div class="laptop-wrapper">
@@ -205,5 +209,4 @@ typeChar();
 </script>
 </body>
 </html>
-
 
