--- a/index.html
+++ b/index.html
@@ -98,28 +98,29 @@
 </head>
 <body>
 
-<!-- Background music with muted autoplay and fade-in -->
+<!-- Background music with fade-in -->
 <audio id="bg-music" autoplay loop muted>
   <source src="intro.mp3" type="audio/mpeg">
 </audio>
 <script>
 const music = document.getElementById("bg-music");
-music.volume = 0; // start silent
-music.muted = false; // unmute to allow autoplay sound
-const targetVolume = 0.2; // desired volume
-const fadeDuration = 5000; // fade in 5 seconds
+music.volume = 0;
+music.muted = false; // unmute for GMod
+const targetVolume = 0.2;
+const fadeDuration = 5000;
 const fadeSteps = 50;
 const fadeInterval = fadeDuration / fadeSteps;
 let currentStep = 0;
 
-function fadeInMusic() {
-    currentStep++;
-    music.volume = Math.min(targetVolume, (currentStep / fadeSteps) * targetVolume);
-    if(currentStep < fadeSteps) setTimeout(fadeInMusic, fadeInterval);
-}
-
-// Small timeout ensures GMod HTML panel allows autoplay
-setTimeout(fadeInMusic, 100);
+// Wait until audio is fully loaded
+music.addEventListener('canplaythrough', () => {
+    function fadeInMusic() {
+        currentStep++;
+        music.volume = Math.min(targetVolume, (currentStep / fadeSteps) * targetVolume);
+        if(currentStep < fadeSteps) setTimeout(fadeInMusic, fadeInterval);
+    }
+    fadeInMusic();
+});
 </script>
 
 <div class="laptop-wrapper">
@@ -209,4 +210,3 @@ typeChar();
 </script>
 </body>
 </html>
-
