--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     color: #fff;
   }
 
-  /* Dark vignette with faint purple corners */
   body::before {
     content: '';
     position: fixed;
@@ -32,16 +31,13 @@
   }
 
   .laptop-wrapper { position: relative; display: flex; flex-direction: column; align-items: center; z-index:1; }
-
   .laptop {
-    width: 700px;
-    height: 450px;
+    width: 700px; height: 450px;
     background: #000;
     border: 12px solid #222;
     border-radius: 12px;
     box-shadow: 0 15px 60px rgba(0,0,0,0.9);
-    display: flex;
-    flex-direction: column;
+    display: flex; flex-direction: column;
     position: relative;
     overflow: hidden;
   }
@@ -69,9 +65,7 @@
   @keyframes blink { 0%,50% {opacity:1;} 50.01%,100% {opacity:0;} }
 
   #documents { position: absolute; top: 20px; right: 20px; font-size: 14px; color: #ccc; text-align: right; }
-
   #flash { position: absolute; top:0; left:0; width:100%; height:100%; background:white; opacity:0; transition: opacity 0.2s; pointer-events:none; }
-
   #main { display:none; flex-direction:column; align-items:center; justify-content:center; text-align:center; background: rgba(0,31,63,0.9); color:white; width:100%; height:100%; position: relative; }
 
   #scp-logo { position: absolute; top:50%; left:50%; transform: translate(-50%, -50%) rotate(0deg); width: 150px; height: 150px; animation: spin 20s linear infinite; }
@@ -80,15 +74,13 @@
   #loading-text { position:absolute; bottom:20px; font-size:20px; }
 
   .laptop-base {
-    width:720px;
-    height:60px;
+    width:720px; height:60px;
     background:#111;
     border-radius:0 0 12px 12px;
     margin-top:-12px;
     box-shadow: 0 5px 40px rgba(0,0,0,0.8), inset 0 -2px 15px rgba(255,255,255,0.05);
     animation: keyboard-glow 2s infinite alternate;
   }
-
   @keyframes keyboard-glow {
     0% { box-shadow: 0 5px 40px rgba(0,0,0,0.8), inset 0 -2px 15px rgba(255,255,255,0.02);}
     50% { box-shadow: 0 5px 40px rgba(0,0,0,0.8), inset 0 -2px 15px rgba(255,255,255,0.08);}
@@ -98,30 +90,10 @@
 </head>
 <body>
 
-<!-- Background music with fade-in -->
-<audio id="bg-music" autoplay loop muted>
-  <source src="intro.mp3" type="audio/mpeg">
+<!-- Background music using OGG for GMod -->
+<audio id="bg-music" autoplay loop>
+  <source src="intro.ogg" type="audio/ogg">
 </audio>
-<script>
-const music = document.getElementById("bg-music");
-music.volume = 0;
-music.muted = false; // unmute for GMod
-const targetVolume = 0.2;
-const fadeDuration = 5000;
-const fadeSteps = 50;
-const fadeInterval = fadeDuration / fadeSteps;
-let currentStep = 0;
-
-// Wait until audio is fully loaded
-music.addEventListener('canplaythrough', () => {
-    function fadeInMusic() {
-        currentStep++;
-        music.volume = Math.min(targetVolume, (currentStep / fadeSteps) * targetVolume);
-        if(currentStep < fadeSteps) setTimeout(fadeInMusic, fadeInterval);
-    }
-    fadeInMusic();
-});
-</script>
 
 <div class="laptop-wrapper">
   <div class="laptop">
