--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
 <body>
 
 <!-- Background music using OGG for GMod -->
-<audio id="bg-music" autoplay loop>
-  <source src="intro.ogg" type="audio/ogg">
-</audio>
+<audio id="audio1" style="display:none" src="intro.ogg" type="audio/ogg" preload="auto" autobuffer=""></audio>
+daj do src muzykę i spróbuj to
 
 <div class="laptop-wrapper">
   <div class="laptop">
@@ -182,4 +181,5 @@ typeChar();
 </script>
 </body>
 </html>
+
 
